Crowd Lending Impl - Refactor
